# gemma-4-good

./: .gitignore  AGENTS.md  config.yaml  pyproject.toml
docs/: PRD.md  synthetic_telugu_symptom_diagnosis_preview.md  training_hypothasis.md
docs/training_runs/: h1_telugu_broad_probe_001.md
scripts/: build_data.py  build_sft_dataset.py  download_hf_datasets.py  eval_grpo_medmcqa.py  evaluate.py  export.py  export_raw_datasets.py  generate_synthetic_telugu.py  hf_merge_policy_adapter.py  modal_grpo.py  modal_train_adapter.py  package_android.py  run_synthetic_telugu_forever.sh  sweep.py  train.py  train_grpo.py  upload_sft_dataset.py
src/gemma_health/: __init__.py  cli.py  config.py  registry.py  types.py
src/gemma_health/data/: mixture.py  sft.py  synthetic_telugu.py  validation.py
src/gemma_health/datasets/: __init__.py  base.py  loader.py  raw_export.py
src/gemma_health/evals/: medmcqa_generation.py  prescription.py  report.py  run.py  triage.py
src/gemma_health/rewards/: combined.py  safety.py  telugu.py  triage.py
src/gemma_health/scaling/: budget.py  curve.py  run.py
src/gemma_health/serving/: android_assets.py  export.py  litert.py  manifest.py  mediapipe.py
src/gemma_health/training/: callbacks.py  hf_policy_merge.py  run.py  unsloth_grpo.py  unsloth_sft.py
tests/: test_config.py  test_datasets.py  test_raw_export.py  test_rewards.py  test_serving_manifest.py  test_sft.py  test_synthetic_telugu.py  test_training.py
